--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,14 +7,15 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Perkuliahan App"
         android:supportsRtl="true"
         android:theme="@style/Theme.ComposePerkuliahanKelompok5"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="Perkuliahan App"
             android:theme="@style/Theme.ComposePerkuliahanKelompok5">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
